--- a/src/DashStack/DashStack.css
+++ b/src/DashStack/DashStack.css
@@ -5,12 +5,25 @@
 .page aside {
   width: 230px;
   position: relative;
+  transition: 0.5s;
+}
+.page aside .header {
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 22px;
 }
 .page aside .logo {
-  margin-bottom: 50px;
   font-size: 20px;
   font-weight: 800;
   text-align: center;
+  cursor: pointer;
+}
+.page aside .header .close {
+  display: none;
+  margin-bottom: -4px;
+  font-size: 20px;
 }
 .page aside .logo span:first-of-type {
   color: var(--primary-color);
@@ -25,6 +38,7 @@
   flex-direction: column;
   justify-content: space-between;
   color: var(--primary-font);
+  background-color: white;
 }
 .page .container ul {
   padding: 22px;
@@ -55,6 +69,9 @@
   background-color: var(--primary-color);
 }
 .page aside button {
+  padding: 15px;
+  margin: 22px;
+  border-radius: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,15 +79,23 @@
   border: none;
   background: transparent;
   cursor: pointer;
+  transition: 0.5s;
+}
+.page aside button:hover {
+  background-color: #eee;
 }
 .page aside button span {
   color: var(--primary-font);
+}
+table .loader-holder {
+  display: flex;
+  justify-content: center;
 }
 /* main */
 main {
   flex: 1;
 }
-main .content {
+main > .content {
   padding: 36px 32px;
   min-height: 100vh;
   background-color: var(--primary-bg);
@@ -80,20 +105,12 @@ main .content header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 main .content header p {
+  /* margin-bottom: 10px; for responsive*/
   font-weight: 700;
   font-size: 28px;
-}
-main .content header button {
-  padding: 12px 21px;
-  border-radius: 7px;
-  border: 1px solid #4880ff;
-  font-size: 12px;
-  font-weight: bold;
-  color: white;
-  cursor: pointer;
-  background-color: var(--primary-color);
 }
 main .content table {
   width: 100%;
@@ -117,7 +134,54 @@ main .content table thead tr th {
   text-align: center;
   padding: 30px;
 }
-main .content table {
+@media (max-width: 991px) {
+  /* .page aside,
+  .page .container {
+    width: 101px;
+    }
+    .page .container ul li {
+      width: fit-content;
+      }
+      .page .container ul li p {
+        display: none;
+        }
+        .page aside .logo {
+          font-size: 18px;
+          padding: 0px 5px;
+          } */
 }
-main .content table {
+/* Responsive styles */
+@media (max-width: 768px) {
+  .page aside .header {
+    justify-content: space-between;
+  }
+  .page aside {
+    position: absolute;
+    left: -100%;
+  }
+  main .content table {
+    border: none;
+    background-color: transparent;
+  }
+  main .content table thead {
+    display: none;
+  }
+
+  main .content table tbody tr {
+    display: block;
+    margin-bottom: 30px;
+  }
+
+  main .content table tbody tr td {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border: 1px solid #d5d5d5;
+  }
+
+  main .content table tbody tr td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    margin-right: 10px;
+  }
 }
