--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -20,4 +20,8 @@ table tbody td button.delete {
 table tbody td button img {
   width: 15px;
   height: 15px;
+  transition: 0.5s;
+}
+table tbody td button:hover img {
+  transform: scale(1.1);
 }
