--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,22 @@
 ul {
   list-style: none;
 }
+.btn {
+  width: 124px;
+  height: 34px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 7px;
+  font-size: 12px;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+  border: 1px solid #4880ff;
+  background-color: var(--primary-color);
+  transition: 0.5s;
+}
+.btn:hover {
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+    rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+}
